# repogen

./: Cargo.toml  README.md
docs/: OAUTH_SETUP.md  README.md  STRUCTURE.md  USAGE.md
src/: cli.rs  config.rs  init.rs  launch.rs  main.rs
src/commands/: config.rs  init.rs  mod.rs  new.rs
src/shared/: config.rs  launch.rs  mod.rs
src/utils/: config.rs  mod.rs
