[package]
name = "repogen"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
console = "0.16.1"
dialoguer = "0.12.0"
indicatif = "0.18.0"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
webbrowser = "1.0"
